Small change to correct h2 overlap in modals.

--- a/dev/2016/summer/knights-in-space/knights-in-space.scss
+++ b/dev/2016/summer/knights-in-space/knights-in-space.scss
@@ -125,8 +125,8 @@ map area {
       display: inline;
       font-family: $light;
       font-size: 32px;
+      line-height: 46px;
       margin-bottom: 0;
-      padding-bottom: 4px;
       text-transform: uppercase;
     }
 
